# libmondai

./: .cvsignore  .gitignore  AUTHORS  BSDL  COPYING  ChangeLog  Makefile.am  Makefile.in  README  TEST  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  libmondai-config.1.in  libmondai-config.in  libmondai.m4  libmondai.pc.in  makecopyright  mkinstalldirs
docs/: Makefile.am  Makefile.in  SOAP-1.2.xsd  api.tex  mondai.tex
src/: .cvsignore  DDlex.c  DDlex.h  DDparser.c  DDparser.h  LBSfunc.c  LBSfunc.h  Lex.c  Lex.h  Makefile.am  Makefile.in  Native.c  Native_v.h  OpenCOBOL.c  OpenCOBOL_v.h  RecParser.c  RecParser.h  SOAP.c  SOAP_v.h  SQLlex.c  SQLlex.h  SQLparser.c  Text.c  Text_v.h  XML.c  XML_v.h  a.c  cobolvalue.c  cobolvalue.h  comm.c  comm.h  comms.c  comms.h  debug.h  dotCOBOL.c  dotCOBOL_v.h  fileutils.c  fileutils.h  fixed.c  fixed_v.h  (+54 more)
tools/: .cvsignore  Makefile.am  Makefile.in  monconv.c  option.c  option.h  rec2copy.c
