# Process this file with autoconf to produce a configure script.
AC_INIT(src)

# Save this value here, since automake will set cflags later
cflags_set=${CFLAGS+set}

# make version
LIBMONDAI_MAJOR_VERSION=0
LIBMONDAI_MINOR_VERSION=0
LIBMONDAI_MICRO_VERSION=1

LIBMONDAI_VERSION=$LIBMONDAI_MAJOR_VERSION.$LIBMONDAI_MINOR_VERSION.$LIBMONDAI_MICRO_VERSION
LTVERSION=`expr $LIBMONDAI_MAJOR_VERSION + $LIBMONDAI_MINOR_VERSION`:$LIBMONDAI_MICRO_VERSION:$LIBMONDAI_MINOR_VERSION

AC_SUBST(LIBMONDAI_MAJOR_VERSION)
AC_SUBST(LIBMONDAI_MINOR_VERSION)
AC_SUBST(LIBMONDAI_MICRO_VERSION)

AC_SUBST(LIBMONDAI_VERSION)
AC_SUBST(LTVERSION)

# For automake
PACKAGE=libmondai
# Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $LIBMONDAI_VERSION, no-define)

# Specify a configuration file
AM_CONFIG_HEADER(config.h)

# Build time sanity check...
AM_SANITY_CHECK

# Checks for programs.
AC_PROG_CC
AC_ISC_POSIX
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Initialize libtool
AM_PROG_LIBTOOL

AM_MAINTAINER_MODE

AC_CANONICAL_HOST

changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl header file checks
AC_CHECK_HEADERS(unistd.h, AC_DEFINE(HAVE_UNISTD_H))
AC_CHECK_HEADERS(dirent.h, AC_DEFINE(HAVE_DIRENT_H))
AC_CHECK_HEADERS(fnmatch.h, AC_DEFINE(HAVE_FNMATCH_H))

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

dnl ***************************************************************************
dnl Add all the cflags & libs needed for the libfixed modules.
dnl ***************************************************************************

AC_PATH_PROG(libfixed_config, libfixed-config)
FIXED_CFLAGS=`$libfixed_config --cflags 2>/dev/null`
FIXED_LIBS=`$libfixed_config --libs 2>/dev/null`
AC_SUBST(FIXED_LIBS)
AC_SUBST(FIXED_CFLAGS)

dnl ***************************************************************************
dnl Add all the cflags & libs needed for the glib modules.
dnl ***************************************************************************

AC_PATH_PROG(GLIB_CONFIG,glib-config,no)
if test x$GLIB_CONFIG = xno; then
  AC_MSG_ERROR(Couldn't find glib-config)
fi
GLIB_LIBS=`glib-config --libs`
GLIB_CFLAGS=`glib-config --cflags`
AC_SUBST(GLIB_LIBS)
AC_SUBST(GLIB_CFLAGS)

AC_OUTPUT([
Makefile
src/Makefile
tools/Makefile
src/libmondai.h
docs/Makefile
libmondai-config
], [chmod +x libmondai-config])
