#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_INIT(src)

LIBMONDAI_MAJOR_VERSION=1
LIBMONDAI_MINOR_VERSION=2
LIBMONDAI_MICRO_VERSION=4

LIBMONDAI_VERSION=$LIBMONDAI_MAJOR_VERSION.$LIBMONDAI_MINOR_VERSION.$LIBMONDAI_MICRO_VERSION
LTVERSION=`expr $LIBMONDAI_MAJOR_VERSION + $LIBMONDAI_MINOR_VERSION`:$LIBMONDAI_MICRO_VERSION:$LIBMONDAI_MINOR_VERSION

AC_SUBST(LIBMONDAI_MAJOR_VERSION)
AC_SUBST(LIBMONDAI_MINOR_VERSION)
AC_SUBST(LIBMONDAI_MICRO_VERSION)

AC_SUBST(LIBMONDAI_VERSION)
AC_SUBST(LTVERSION)

AM_INIT_AUTOMAKE(libmondai, $LIBMONDAI_VERSION)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CC
AC_ISC_POSIX
AM_PROG_CC_STDC
AC_PROG_INSTALL
AM_PROG_LIBTOOL
AC_PROG_MAKE_SET

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([unistd.h dirent.h fnmatch.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

dnl ***************************************************************************
dnl i18n feture
dnl ***************************************************************************

USE_I18N="yes"
LIBMONDAI_I18N=0
AC_ARG_ENABLE(i18n,
    [  --disable-i18n          disable link with iconv [[enable]]],
    [USE_I18N=$enable_i18n])
if test "x$USE_I18N" = "xyes"; then
    AC_DEFINE(WITH_I18N,1,"")
    LIBMONDAI_I18N=1  
fi
AC_SUBST(LIBMONDAI_I18N)

dnl ***************************************************************************
dnl GLib
dnl ***************************************************************************

AC_PATH_PROG(GLIB_CONFIG,glib-config,no)
if test x$GLIB_CONFIG = xno; then
  AC_MSG_ERROR(Couldn't find glib-config)
fi
GLIB_LIBS=`glib-config --libs`
GLIB_CFLAGS=`glib-config --cflags`
AC_SUBST(GLIB_LIBS)
AC_SUBST(GLIB_CFLAGS)

dnl ***************************************************************************
dnl libxml
dnl ***************************************************************************
USE_LIBXML="no"
AC_ARG_WITH(xml,
    [  --with-xml=<encode>     Use libxml with encode [[no]]],
    [USE_LIBXML=$withval], [USE_LIBXML="no"])
if test "x$USE_LIBXML" != "xno"; then
    if test "x$USE_LIBXML" = "xyes"; then
        USE_LIBXML="euc-jp"
    fi
    AC_PATH_PROG(XML_CONFIG,xml-config,no)
    if test "x$XML_CONFIG" = "xno"; then
        AC_MSG_ERROR(Couldn't find xml-config)
    fi
    XML_LIBS=`xml-config --libs`
    XML_CFLAGS=`xml-config --cflags`
    AC_SUBST(XML_LIBS)
    AC_SUBST(XML_CFLAGS)
    AC_DEFINE(USE_XML,1,"")
    AC_DEFINE_UNQUOTED(LIBXML_CODE,"$USE_LIBXML","")
fi

dnl ***************************************************************************
dnl libxml2
dnl ***************************************************************************
USE_LIBXML2="yes"
AC_ARG_ENABLE(xml2,
    [  --disable-xml2          disable xml with libxml2 [[enable]]],
    [USE_LIBXML2=$enable_xml2])
if test "x$USE_LIBXML2" != "xno"; then
    AC_PATH_PROG(XML_CONFIG,xml2-config,no)
    if test "x$XML_CONFIG" = "xno"; then
        AC_MSG_ERROR(Couldn't find xml2-config)
    fi
    XML_LIBS=`xml2-config --libs`
    XML_CFLAGS=`xml2-config --cflags`
    AC_SUBST(XML_LIBS)
    AC_SUBST(XML_CFLAGS)
    AC_DEFINE(USE_XML,2,"")
    AC_DEFINE(USE_XML2,1,"")
fi

dnl ***************************************************************************
dnl SOAP
dnl ***************************************************************************
USE_SOAP="yes"
AC_ARG_ENABLE(soap,
    [  --disable-soap          disable soap [[enable]]],
    [USE_SOAP=$enable_soap])
if test "x$USE_SOAP" != "xno"; then
    AC_DEFINE(USE_SOAP,1,"")
fi

dnl ***************************************************************************

AC_OUTPUT([
Makefile
src/Makefile
tools/Makefile
src/libmondai.h
docs/Makefile
libmondai-config
libmondai-config.1
], [chmod +x libmondai-config])

dnl ***************************************************************************
dnl output result
dnl ***************************************************************************

echo "------------------------------------------------------"
echo "libmondai Configuration:"
echo ""
echo "  VERSION:               $LIBMONDAI_VERSION"
echo "  LTVERSION:             $LTVERSION"
echo "  i18n Support:          $USE_I18N"
echo "  libxml Support:        $USE_LIBXML"
echo "  libxml2 Support:       $USE_LIBXML2"
echo ""
